--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -13,194 +13,7 @@
   crossorigin="anonymous"></script>
 </head>
 <body class="index">
-  <div class="nav-hover">
-    <nav class="nav nav-grid nav-index nav-default">
-      <div class="nav-item-logo">
-        <a href="index.html"><img src="images/logo-embold.svg" width="113" height="20" /></a>
-      </div>
-      <div class="nav-wrap-items">
-        <div class="nav-item-main nav-item-main-product">
-          <span class="product" id="menu-item-product">Product <i class="fas fa-angle-down"></i></span>
-        </div>
-        <div class="nav-item-main nav-item-main-solutions">
-          <span class="user-stories" id="menu-item-solutions">Solutions <i class="fas fa-angle-down"></i></span>
-        </div>
-        <div class="nav-item-main nav-item-main-resources">
-          <span class="resources"id="menu-item-resources">Resources <i class="fas fa-angle-down"></i></span>
-        </div>
-        <div class="nav-item-main nav-item-main-company">
-          <span class="company"id="menu-item-company">Company <i class="fas fa-angle-down"></i></span>
-        </div>
-      </div>
-      <div class="nav-item-sign">
-        Sign-in
-      </div>
-    </nav>
-    <div>
-      <div class="nav-grid nav-sub-product nav-default nav-sub nav-grid-wide">
-        <div class="nav-item-logo">
-          &nbsp;
-        </div>
-        <div class="nav-wrap-items">
-          <div class="nav-item-main">
-            <a href="product-overview.html" class="nav-menu-link">Overview</a>
-            <ul class="nav-item-sub-list">
-              <li><a href="product-overview.html#bug-prediction">Bug Prediction</a></li>
-              <li><a href="product-overview.html#recommendation">Recommendation Engine</a></li>
-              <li><a href="product-overview.html#scoring">Scoring and A.I. Base Priorization</a></li>
-              <li><a href="product-overview.html#refactoring">Refactoring</a></li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="product-features.html" class="nav-menu-link">Features</a>
-            <ul class="nav-item-sub-list">
-              <li><a href="product-features.html#artificial">Artificial Intelligence</a></li>
-              <li><a href="product-features.html#integrated">Integrated Platform</a></li>
-              <li><a href="product-features.html#accuracy">Accuracy and Completeness</a></li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
-            <ul class="nav-item-sub-list">
-              <li><a href="product-use-cases.html#productivity">Productivity Management</a></li>
-              <li><a href="product-use-cases.html#technical">Technical Debt Management</a></li>
-              <li><a href="product-use-cases.html#supplier">Supplier Monitoring</a></li>
-              <li><a href="product-use-cases.html#onboarding">Onboarding and Training</a></li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
-            <ul class="nav-item-sub-list">
-              <li><a href="product-pricing.html">Cloud</a></li>
-              <li><a href="product-pricing-on-premise.html">On-Premise</a></li>
-              <li><a href="product-pricing-enterprise.html">Assessment Services</a></li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
-            <ul class="nav-item-sub-list">
-              <li><a href="product-partnership.html#partnership">Partnership</a></li>
-              <li><a href="product-partnership.html#open-source">Open Source Sponsorships</a></li>
-              <li><a href="product-partnership.html#crypto">Crypto</a></li>
-            </ul>
-          </div>
-          <div class="cb"></div>
-        </div>
-      </div>
-      <div class="nav-grid nav-sub-solutions nav-default nav-sub">
-        <div class="nav-item-logo">
-          &nbsp;
-        </div>
-        <div class="nav-wrap-items">
-          <div class="nav-item-main">
-            <a href="user-stories-user-roles.html" class="nav-menu-link">By User Role</a>
-            <ul class="nav-item-sub-list">
-              <li><a href="user-stories-user-roles.html">Executives</li>
-              <li><a href="user-stories-user-roles-pm.html">Project Managers</li>
-              <li><a href="user-stories-user-roles-architect.html">Architects</li>
-              <li><a href="user-stories-user-roles-developer.html">Developers</li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
-            <ul class="nav-item-sub-list">
-              <li><a href="user-stories-team-size.html">Individuals</li>
-              <li><a href="user-stories-team-size-teams.html">Teams</li>
-              <li><a href="user-stories-team-size-business.html">Business</li>
-              <li><a href="user-stories-team-size-enterprise.html">Enterprise</li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
-            <ul class="nav-item-sub-list">
-              <li><a href="user-stories-industry.html">Automotive</li>
-              <li><a href="user-stories-industry-energy.html">Energy</li>
-              <li><a href="user-stories-industry-financial.html">Financial and Insurance</li>
-              <li><a href="user-stories-industry-tmt.html">TMT</li>
-              <li><a href="user-stories-industry-natural.html">Natural Resources</li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="user-stories-solution-approach.html" class="nav-menu-link">Solution Approach</a>
-            <ul class="nav-item-sub-list">
-              <li><a href="user-stories-solution-approach.html#deployment">Deployment Options</a></li>
-              <li><a href="user-stories-solution-approach.html#solution">Solution Engineerings Approach</a></li>
-              <li><a href="user-stories-solution-approach.html#service">Service Offerings</a></li>
-              <li><a href="user-stories-solution-approach.html#customer">Customer Success</a></li>
-            </ul>
-          </div>
-          <div class="cb"></div>
-        </div>
-      </div>
-      <div class="nav-grid nav-sub-resources nav-default nav-sub">
-        <div class="nav-item-logo">
-          &nbsp;
-        </div>
-        <div class="nav-wrap-items">
-          <div class="nav-item-main">
-            <a href="resources-product.html" class="nav-menu-link">Product</a>
-            <ul class="nav-item-sub-list">
-              <li>FAQ</li>
-              <li>Onboarding Guide</li>
-              <li>Handbook</li>
-              <li>Technicial Documentation</li>
-              <li>Installer</li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="resources-download.html" class="nav-menu-link">Download</a>
-            <ul class="nav-item-sub-list">
-              <li>White Papers</li>
-              <li>Case Studies</li>
-              <li>Success Stories</li>
-            </ul>
-          </div>
-          <div class="cb"></div>
-        </div>
-      </div>
-      <div class="nav-grid nav-sub-company nav-default nav-sub">
-        <div class="nav-item-logo">
-          &nbsp;
-        </div>
-        <div class="nav-wrap-items">
-          <div class="nav-item-main">
-            <a href="company-about.html" class="nav-menu-link">About</a>
-            <ul class="nav-item-sub-list">
-              <li>Overall</li>
-              <li>Timeline</li>
-              <li>Offices</li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="company-team.html" class="nav-menu-link">Team</a>
-            <ul class="nav-item-sub-list">
-              <li>Leadership</li>
-              <li>Investers</li>
-              <li>Members</li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="company-careers.html" class="nav-menu-link">Careers</a>
-            <ul class="nav-item-sub-list">
-              <li>Team Value</li>
-              <li>Benefits</li>
-              <li>Opening Jobs</li>
-            </ul>
-          </div>
-          <div class="nav-item-main">
-            <a href="company-news.html" class="nav-menu-link">News</a>
-            <ul class="nav-item-sub-list">
-              <li>Press Releases</li>
-              <li>Blog</li>
-              <li>Brand Kit</li>
-              <li>SNS</li>
-            </ul>
-          </div>
-          <div class="cb"></div>
-        </div>
-      </div>
-    </div>
-  </div>
+  <div class="nav-hover"></div>
 
   <div class="container-fluid bg-light block-index-hero">
     <div class="header-image bg-index-hero"></div>
