--- a/embold.com/nav.html
+++ b/embold.com/nav.html
@@ -22,40 +22,154 @@
     </div>
   </nav>
   <div>
-    <div class="nav-grid nav-sub nav-default">
+    <div class="nav-grid nav-sub-product nav-default nav-sub nav-grid-wide">
       <div class="nav-item-logo">
         &nbsp;
       </div>
       <div class="nav-wrap-items">
         <div class="nav-item-main">
-          <a href="product-overview.html" class="nav-menu-link">Overview</a>
-          <a href="product-features.html" class="nav-menu-link">Features</a>
-          <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
-          <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
-          <a href="product-partnership.html" class="nav-menu-link">Partnership</a>
+          <a href="product-overview.html" class="nav-menu-link">About Gamma</a>
+          <ul class="nav-item-sub-list">
+            <li>Bug Prediction</li>
+            <li>Recommendation Engine</li>
+            <li>Scoring and A.I. Base Priorization</li>
+            <li>Refactoring</li>
+          </ul>
         </div>
+
+        <div class="nav-item-main">
+          <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
+          <ul class="nav-item-sub-list">
+            <li>Productivity Management</li>
+            <li>Technical Debt Management</li>
+            <li>Supplier Monitoring</li>
+            <li>Onboarding and Training</li>
+          </ul>
+        </div>
+        <div class="nav-item-main">
+          <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
+          <ul class="nav-item-sub-list">
+            <li>Free (For Open-source Project)</li>
+            <li>Cloud</li>
+            <li>On-Premise</li>
+            <li>Assessment Services</li>
+          </ul>
+        </div>
+        <div class="cb"></div>
+      </div>
+    </div>
+    <div class="nav-grid nav-sub-solutions nav-default nav-sub">
+      <div class="nav-item-logo">
+        &nbsp;
+      </div>
+      <div class="nav-wrap-items">
         <div class="nav-item-main">
           <a href="user-stories-user-roles.html" class="nav-menu-link">By User Role</a>
-          <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
-          <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
-          <a href="user-stories-solution-approach.html" class="nav-menu-link">Solution Approach</a>
+          <ul class="nav-item-sub-list">
+            <li>Executives</li>
+            <li>Project Managers</li>
+            <li>Architects</li>
+            <li>Developers</li>
+          </ul>
         </div>
+        <div class="nav-item-main">
+          <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
+          <ul class="nav-item-sub-list">
+            <li>Individuals</li>
+            <li>Teams</li>
+            <li>Business</li>
+            <li>Enterprise</li>
+          </ul>
+        </div>
+        <div class="nav-item-main">
+          <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
+          <ul class="nav-item-sub-list">
+            <li>Automotive</li>
+            <li>Financial</li>
+            <li>Industrial</li>
+            <li>Technology/Telecom</li>
+            <li>Others</li>
+          </ul>
+        </div>
+        <div class="nav-item-main">
+          <a href="user-stories-solution-approach.html" class="nav-menu-link">Solution Approach</a>
+          <ul class="nav-item-sub-list">
+            <li>Deployment Options</li>
+            <li>Solution Approach</li>
+            <li>Service Offerings</li>
+            <li>Customer Success</li>
+          </ul>
+        </div>
+        <div class="cb"></div>
+      </div>
+    </div>
+    <div class="nav-grid nav-sub-resources nav-default nav-sub">
+      <div class="nav-item-logo">
+        &nbsp;
+      </div>
+      <div class="nav-wrap-items">
         <div class="nav-item-main">
           <a href="resources-product.html" class="nav-menu-link">Product</a>
-          <a href="resources-download.html" class="nav-menu-link">Download</a>
-          <a href="resources-media.html" class="nav-menu-link">Media</a>
+          <ul class="nav-item-sub-list">
+            <li>FAQ</li>
+            <li>Onboarding Guide</li>
+            <li>Handbook</li>
+            <li>Technicial Documentation</li>
+            <li>Installer</li>
+          </ul>
         </div>
         <div class="nav-item-main">
-          <a href="company-about.html" class="nav-menu-link">About</a>
-          <a href="company-team.html" class="nav-menu-link">Team</a>
-          <a href="company-careers.html" class="nav-menu-link">Careers</a>
-          <a href="company-news.html" class="nav-menu-link">News</a>
+          <a href="resources-download.html" class="nav-menu-link">Download</a>
+          <ul class="nav-item-sub-list">
+            <li>White Papers</li>
+            <li>Case Studies</li>
+            <li>Success Stories</li>
+          </ul>
         </div>
+        <div class="cb"></div>
+      </div>
+    </div>
+    <div class="nav-grid nav-sub-company nav-default nav-sub">
+      <div class="nav-item-logo">
+        &nbsp;
+      </div>
+      <div class="nav-wrap-items">
+        <div class="nav-item-main">
+          <a href="company-about.html" class="nav-menu-link">About</a>
+          <ul class="nav-item-sub-list">
+            <li>Overall</li>
+            <li>Timeline</li>
+            <li>Offices</li>
+          </ul>
+        </div>
+        <div class="nav-item-main">
+          <a href="company-team.html" class="nav-menu-link">Team</a>
+          <ul class="nav-item-sub-list">
+            <li>Leadership</li>
+            <li>Investers</li>
+            <li>Members</li>
+          </ul>
+        </div>
+        <div class="nav-item-main">
+          <a href="company-careers.html" class="nav-menu-link">Careers</a>
+          <ul class="nav-item-sub-list">
+            <li>Team Value</li>
+            <li>Benefits</li>
+            <li>Opening Jobs</li>
+          </ul>
+        </div>
+        <div class="nav-item-main">
+          <a href="company-news.html" class="nav-menu-link">News</a>
+          <ul class="nav-item-sub-list">
+            <li>Press Releases</li>
+            <li>Blog</li>
+            <li>Brand Kit</li>
+            <li>SNS</li>
+          </ul>
+        </div>
+        <div class="cb"></div>
       </div>
     </div>
   </div>
-  <script>
-    $('.nav').click(function(){
-      $('.nav-sub').fadeToggle(200);
-    });
+  <script src="js/nav.js">
   </script>
