--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -7,13 +7,14 @@
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/embold.css">
   <link rel="stylesheet" type="text/css" title="Cool stylesheet" href="css/simple-grid.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script
-  src="https://code.jquery.com/jquery-3.3.1.js"
-  integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
+  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
 </head>
 <body class="index">
-  <div class="nav-hover"></div>
+  <div class="nav-index"></div>
 
   <div class="container-fluid bg-light block-index-hero">
     <div class="header-image bg-index-hero"></div>
@@ -321,6 +322,5 @@
     </div>
   </div>
   <script src="js/main.js" type="text/javascript"></script>
-  <script src="js/nav.js" type="text/javascript"></script>
 </body>
 </html>
