--- a/embold.com/company-news.html
+++ b/embold.com/company-news.html
@@ -13,7 +13,7 @@
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="company-news">
   <div class="nav-company"></div>
 
   <div class="block block-header-sub header-resource-product bg-resources-product background-no-repeat">
@@ -27,49 +27,169 @@
     </div>
   </div>
 
-  <section class="block block-company-summary">
-    <div class="container">
-      <div class="row">
-        <div class="col-12">
-          News articles
+  <section class="container block block-section-sub press-releases">
+    <div class="row">
+      <div class="col-12">
+        <span class="icon-section ic-cloud-code"></span>
+        <h2 class="section-title">Press Releases</h2>
+      </div>
+      <div class="col-1"></div>
+      <div class="col-10">
+        <div class="block-input">
+          <h4 class="input-title">Published year</h4>
+          <select name="press-releases-pub-year" class="input inline-input input-dropdown">
+            <option>2019</option>
+            <option>2018</option>
+            <option>2017</option>
+            <option>2016</option>
+          </select>
         </div>
+        <table class="press-releases-table">
+          <tbody>
+            <tr>
+              <td class="photo">
+                <div class="bg-press-thumbnail photo-press-logo-bloomberg"></div>
+              </td>
+              <td class="title">
+                <h3 class="press-title">
+                  Frankfurter Software - Startup Bekommt 2,25 Millionen
+                </h3>
+                <p class="press-summary">
+                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
+                </p>
+                <p class="date">
+                  24 Feb. 2019
+                </p>
+              </td>
+              <td class="btn">
+                <a href="#" class="btn btn-text">Read More</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="photo">
+                <div class="bg-press-thumbnail photo-press-logo-theguardian"></div>
+              </td>
+              <td class="title">
+                <h3 class="press-title">
+                  Frankfurter Software - Startup Bekommt 2,25 Millionen
+                </h3>
+                <p class="press-summary">
+                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
+                </p>
+                <p class="date">
+                  24 Jan. 2019
+                </p>
+              </td>
+              <td class="btn">
+                <a href="#" class="btn btn-text">Read More</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="photo">
+                <div class="bg-press-thumbnail photo-press-logo-bloomberg"></div>
+              </td>
+              <td class="title">
+                <h3 class="press-title">
+                  Frankfurter Software - Startup Bekommt 2,25 Millionen
+                </h3>
+                <p class="press-summary">
+                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
+                </p>
+                <p class="date">
+                  24 Jan. 2019
+                </p>
+              </td>
+              <td class="btn">
+                <a href="#" class="btn btn-text">Read More</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </section>
-
-  <section class="container block block-section-sub block-section-left">
+  <section class="container block block-section-sub pricing-plan">
     <div class="row">
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">From Good to Great</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+      <div class="col-12">
+        <span class="icon-section ic-cloud-code"></span>
+        <h2 class="section-title">Company News</h2>
       </div>
-      <div class="col-6">
-        image
+      <div class="col-1"></div>
+      <div class="col-10">
+        <div class="block-input">
+          <h4 class="input-title">Published year</h4>
+          <select name="press-releases-pub-year" class="input inline-input input-dropdown">
+            <option>2019</option>
+            <option>2018</option>
+            <option>2017</option>
+            <option>2016</option>
+          </select>
+        </div>
+        <table class="company-news-table">
+          <tbody>
+            <tr>
+              <td class="title">
+                <h3 class="press-title">
+                  Frankfurter Software - Startup Bekommt 2,25 Millionen
+                </h3>
+                <p class="press-summary">
+                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
+                </p>
+                <p class="date">
+                  24 Feb. 2019
+                </p>
+              </td>
+              <td class="btn">
+                <a href="#" class="btn btn-text">Read More</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="title">
+                <h3 class="press-title">
+                  Frankfurter Software - Startup Bekommt 2,25 Millionen
+                </h3>
+                <p class="press-summary">
+                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
+                </p>
+                <p class="date">
+                  24 Jan. 2019
+                </p>
+              </td>
+              <td class="btn">
+                <a href="#" class="btn btn-text">Read More</a>
+              </td>
+            </tr>
+            <tr>
+              <td class="title">
+                <h3 class="press-title">
+                  Frankfurter Software - Startup Bekommt 2,25 Millionen
+                </h3>
+                <p class="press-summary">
+                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
+                </p>
+                <p class="date">
+                  24 Jan. 2019
+                </p>
+              </td>
+              <td class="btn">
+                <a href="#" class="btn btn-text">Read More</a>
+              </td>
+            </tr>
+          </tbody>
+        </table>
       </div>
     </div>
   </section>
-  <section class="container block block-section-sub block-section-right">
+  <section class="container block block-section-sub pricing-plan">
     <div class="row">
-      <div class="col-6">
-        image
-      </div>
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">Multi-Dimensional Static Analysis</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-    </div>
-  </section>
-  <section class="container block block-section-sub block-section-left">
-    <div class="row">
-      <div class="col-6">
-        <!-- <h4>Language Support</h4> -->
-        <h2 class="section-title">From Good to Great</h2>
-        <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
-      </div>
-      <div class="col-6">
-        image
+      <div class="col-12">
+        <span class="icon-section ic-cloud-code"></span>
+        <h2 class="section-title">Press/Brand Kit</h2>
+        <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies.
+          They are improving their codes and applications via embold.
+          And also many developers and project managers want to use
+          Embold to improve a progress in writing codes
+        </p>
       </div>
     </div>
   </section>
