--- a/embold.com/company-news.html
+++ b/embold.com/company-news.html
@@ -61,11 +61,11 @@
                 <h3 class="press-title">
                   Frankfurter Software - Startup Bekommt 2,25 Millionen
                 </h3>
-                <p class="press-summary">
-                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
-                </p>
                 <p class="date">
                   24 Feb. 2019
+                </p>
+                <p class="press-summary">
+                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
                 </p>
               </td>
               <td class="btn">
@@ -80,11 +80,11 @@
                 <h3 class="press-title">
                   Frankfurter Software - Startup Bekommt 2,25 Millionen
                 </h3>
-                <p class="press-summary">
-                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
-                </p>
                 <p class="date">
                   24 Jan. 2019
+                </p>
+                <p class="press-summary">
+                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
                 </p>
               </td>
               <td class="btn">
@@ -99,11 +99,11 @@
                 <h3 class="press-title">
                   Frankfurter Software - Startup Bekommt 2,25 Millionen
                 </h3>
-                <p class="press-summary">
-                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
-                </p>
                 <p class="date">
                   24 Jan. 2019
+                </p>
+                <p class="press-summary">
+                  Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
                 </p>
               </td>
               <td class="btn">
@@ -115,7 +115,7 @@
       </div>
     </div>
   </section>
-  <section class="container block block-section-sub pricing-plan">
+  <section class="container block block-section-sub company-news">
     <div class="row">
       <div class="col-12">
         <span class="icon-section ic-cloud-code"></span>
@@ -124,13 +124,35 @@
       <div class="col-1"></div>
       <div class="col-10">
         <div class="block-input">
-          <h4 class="input-title">Published year</h4>
-          <select name="press-releases-pub-year" class="input inline-input input-dropdown">
-            <option>2019</option>
-            <option>2018</option>
-            <option>2017</option>
-            <option>2016</option>
-          </select>
+          <h4 class="input-title">Categories</h4>
+          <label class="wrap-checkbox-item">
+            Release Note
+            <input type="checkbox" checked="checked">
+            <span class="checkmark"></span>
+          </label>
+          <label class="wrap-checkbox-item">
+            Company Update
+            <input type="checkbox" checked="checked">
+            <span class="checkmark"></span>
+          </label>
+          <label class="wrap-checkbox-item">
+            Events
+            <input type="checkbox" checked="checked">
+            <span class="checkmark"></span>
+          </label>
+          <label class="wrap-checkbox-item">
+            News Coverage
+            <input type="checkbox" checked="checked">
+            <span class="checkmark"></span>
+          </label>
+          <label class="wrap-checkbox-item">
+            Newsletter
+            <input type="checkbox" checked="checked">
+            <span class="checkmark"></span>
+          </label>
+          <div class="block-btn">
+            <a href="#" class="btn btn-md btn-default" >Subscribe</a>
+          </div>
         </div>
         <table class="company-news-table">
           <tbody>
@@ -139,11 +161,11 @@
                 <h3 class="press-title">
                   Frankfurter Software - Startup Bekommt 2,25 Millionen
                 </h3>
+                <p class="date">
+                  24 Feb. 2019 / Release Note
+                </p>
                 <p class="press-summary">
                   Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
-                </p>
-                <p class="date">
-                  24 Feb. 2019
                 </p>
               </td>
               <td class="btn">
@@ -155,11 +177,11 @@
                 <h3 class="press-title">
                   Frankfurter Software - Startup Bekommt 2,25 Millionen
                 </h3>
+                <p class="date">
+                  24 Feb. 2019 / Company Update
+                </p>
                 <p class="press-summary">
                   Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
-                </p>
-                <p class="date">
-                  24 Jan. 2019
                 </p>
               </td>
               <td class="btn">
@@ -171,11 +193,11 @@
                 <h3 class="press-title">
                   Frankfurter Software - Startup Bekommt 2,25 Millionen
                 </h3>
+                <p class="date">
+                  24 Feb. 2019 / Events
+                </p>
                 <p class="press-summary">
                   Frankfurt am Main ist ein bedeutender Finanzplatz und Sitz der Europäischen Zentralbank. Im ehemaligen Wohnhaus Johann Wolfgang von Goethes,
-                </p>
-                <p class="date">
-                  24 Jan. 2019
                 </p>
               </td>
               <td class="btn">
@@ -187,7 +209,7 @@
       </div>
     </div>
   </section>
-  <section class="container block block-section-sub pricing-plan">
+  <section class="container block block-section-sub brand-kit">
     <div class="row">
       <div class="col-12">
         <span class="icon-section ic-cloud-code"></span>
