--- a/embold.com/company-news.html
+++ b/embold.com/company-news.html
@@ -37,7 +37,7 @@
   <section class="container block block-section-sub press-releases">
     <div class="row">
       <div class="col-12">
-        <span class="icon-section ic-cloud-code"></span>
+        <span class="icon-section ic-press"></span>
         <h2 class="section-title">Press Releases</h2>
       </div>
       <div class="col-1"></div>
@@ -45,6 +45,7 @@
         <div class="block-input">
           <h4 class="input-title">Published year</h4>
           <select name="press-releases-pub-year" class="input inline-input input-dropdown">
+            <option>All articles</option>
             <option>2019</option>
             <option>2018</option>
             <option>2017</option>
@@ -118,7 +119,7 @@
   <section class="container block block-section-sub company-news">
     <div class="row">
       <div class="col-12">
-        <span class="icon-section ic-cloud-code"></span>
+        <span class="icon-section ic-stars"></span>
         <h2 class="section-title">Company News</h2>
       </div>
       <div class="col-1"></div>
@@ -151,7 +152,7 @@
             <span class="checkmark"></span>
           </label>
           <div class="block-btn">
-            <a href="#" class="btn btn-md btn-default" >Subscribe</a>
+            <a href="#" class="btn btn-md btn-default" ><i class="fas fa-rss"></i> Subscribe</a>
           </div>
         </div>
         <table class="company-news-table">
@@ -209,6 +210,7 @@
       </div>
     </div>
   </section>
+  <!--
   <section class="container block block-section-sub brand-kit">
     <div class="row">
       <div class="col-12">
@@ -222,6 +224,7 @@
       </div>
     </div>
   </section>
+  -->
 
   <!-- landing to other page block -->
   <div class="container-fluid bg-orange">
