index contents update

--- a/embold.com/index.html
+++ b/embold.com/index.html
@@ -202,13 +202,48 @@
         <h2>Find Our Strength</h2>
         <p class="block-description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
       </div>
-      <div class="body-content">
-        <div class="col-12">
-          <div class="background-no-repeat il-index-features">
-
+      <a name="artificial"></a>
+      <section class="container block-section-sub block-section-left">
+        <div class="row">
+          <div class="col-6">
+            <!-- <h4>Language Support</h4> -->
+            <h2 class="section-title">Artificial Intelligence</h2>
+            <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+          </div>
+          <div class="col-5">
+            <div class="il-product-features-from-to background-no-repeat body-illustration"></div>
           </div>
         </div>
-      </div>
+      </section>
+      <a name="intergrated"></a>
+      <section class="container block-section-sub block-section-right">
+        <div class="row">
+          <div class="col-1">
+
+          </div>
+          <div class="col-5">
+            <div class="il-product-features-multi-dimension background-no-repeat body-illustration"></div>
+          </div>
+          <div class="col-6">
+            <!-- <h4>Language Support</h4> -->
+            <h2 class="section-title">Intergrated Platform</h2>
+            <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+          </div>
+        </div>
+      </section>
+      <a name="accuracy"></a>
+      <section class="container block-section-sub block-section-left">
+        <div class="row">
+          <div class="col-6">
+            <!-- <h4>Language Support</h4> -->
+            <h2 class="section-title">Accuracy and Completeness</h2>
+            <p class="description">embold is trusted by 1,000+ developers and 10+ Mega Companies. They are improving their codes and applications via embold. And also many developers and project managers want to use Embold to improve a progress in writing codes</p>
+          </div>
+          <div class="col-5">
+            <div class="il-product-features-smart-priori background-no-repeat body-illustration"></div>
+          </div>
+        </div>
+      </section>
       <div class="col-12 text-center">
         <button class="btn btn-default btn-md" onclick="window.location.href='./product-features.html'">Find out more Features</button>
       </div>
