--- a/embold.com/nav-resources.html
+++ b/embold.com/nav-resources.html
@@ -32,29 +32,28 @@
       <div class="nav-item-main">
         <a href="product-overview.html" class="nav-menu-link">About Gamma</a>
         <ul class="nav-item-sub-list">
-          <li>Bug Prediction</li>
-          <li>Recommendation Engine</li>
-          <li>Scoring and A.I. Base Priorization</li>
-          <li>Refactoring</li>
+          <li><a href="product-overview.html">Bug Prediction</a></li>
+          <li><a href="product-overview.html">Recommendation Engine</li>
+          <li><a href="product-overview.html">Scoring and A.I. Base Priorization</li>
+          <li><a href="product-overview.html">Refactoring</li>
         </ul>
       </div>
-
       <div class="nav-item-main">
         <a href="product-use-cases.html" class="nav-menu-link">Use Cases</a>
         <ul class="nav-item-sub-list">
-          <li>Productivity Management</li>
-          <li>Technical Debt Management</li>
-          <li>Supplier Monitoring</li>
-          <li>Onboarding and Training</li>
+          <li><a href="product-use-cases.html">Productivity Management</li>
+          <li><a href="product-use-cases.html">Technical Debt Management</li>
+          <li><a href="product-use-cases.html">Supplier Monitoring</li>
+          <li><a href="product-use-cases.html">Onboarding and Training</li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="product-pricing.html" class="nav-menu-link">Pricing</a>
         <ul class="nav-item-sub-list">
-          <li>Free (For Open-source Project)</li>
-          <li>Cloud</li>
-          <li>On-Premise</li>
-          <li>Assessment Services</li>
+          <li><a href="product-pricing.html">Free (For Open-source Project)</li>
+          <li><a href="product-pricing.html">Cloud</li>
+          <li><a href="product-pricing.html">On-Premise</li>
+          <li><a href="product-pricing.html">Assessment Services</li>
         </ul>
       </div>
       <div class="cb"></div>
@@ -68,38 +67,37 @@
       <div class="nav-item-main">
         <a href="user-stories-user-roles.html" class="nav-menu-link">By User Role</a>
         <ul class="nav-item-sub-list">
-          <li>Executives</li>
-          <li>Project Managers</li>
-          <li>Architects</li>
-          <li>Developers</li>
+          <li><a href="user-stories-user-roles-executives.html">Executives</li>
+          <li><a href="user-stories-user-roles-executives.html">Project Managers</li>
+          <li><a href="user-stories-user-roles-executives.html">Architects</li>
+          <li><a href="user-stories-user-roles-executives.html">Developers</li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="user-stories-team-size.html" class="nav-menu-link">By Team Size</a>
         <ul class="nav-item-sub-list">
-          <li>Individuals</li>
-          <li>Teams</li>
-          <li>Business</li>
-          <li>Enterprise</li>
+          <li><a href="user-stories-user-roles-team-size-teams.html">Teams</li>
+          <li><a href="user-stories-user-roles-team-size-business.html">Business</li>
+          <li><a href="user-stories-user-roles-team-size-enterprise.html">Enterprise</li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="user-stories-industry.html" class="nav-menu-link">By Industry</a>
         <ul class="nav-item-sub-list">
-          <li>Automotive</li>
-          <li>Energy</li>
-          <li>Financial and Insurance</li>
-          <li>TMT</li>
-          <li>Natural Resources</li>
+          <li><a href="user-stories-industry.html">Automotive</li>
+          <li><a href="user-stories-industry-financial.html">Financial</li>
+          <li><a href="user-stories-industry-industrial.html">Industrial</li>
+          <li><a href="user-stories-industry-tt.html">Technology/Telecom</li>
+          <li><a href="user-stories-industry-others.html">Others</li>
         </ul>
       </div>
       <div class="nav-item-main">
         <a href="user-stories-solution-approach.html" class="nav-menu-link">Solution Approach</a>
         <ul class="nav-item-sub-list">
-          <li>Deployment Options</li>
-          <li>Solution Engineerings Approach</li>
-          <li>Service Offerings</li>
-          <li>Customer Success</li>
+          <li><a href="user-stories-solution-approach.html#">Deployment Options</li>
+          <li><a href="user-stories-solution-approach.html#">Solution Engineerings Approach</li>
+          <li><a href="user-stories-solution-approach.html#">Service Offerings</li>
+          <li><a href="user-stories-solution-approach.html#">Customer Success</li>
         </ul>
       </div>
       <div class="cb"></div>
