--- a/embold.com/user-stories-team-size.html
+++ b/embold.com/user-stories-team-size.html
@@ -42,10 +42,7 @@
           </div>
           <div class="tab-wrap">
             <div class="tab-item active" onclick="window.location.href='./user-stories-team-size.html'">
-              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Indivisuals</span>
-            </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-team-size-teams.html'">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Teams</span>
+              <div class="tab-item-icon ic-sm-user-executive"></div> <span>Teams</span>
             </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-team-size-business.html'">
               <div class="tab-item-icon ic-sm-user-architect"></div> <span>Business</span>
