--- a/embold-blue.com/user-stories-user-roles-architects.html
+++ b/embold-blue.com/user-stories-user-roles-architects.html
@@ -44,14 +44,14 @@
             <div class="tab-item" onclick="window.location.href='./user-stories-user-roles.html'">
               <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-developer.html'">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developer</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-developers.html'">
+              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developers</span>
             </div>
-            <div class="tab-item active" onclick="window.location.href='./user-stories-user-roles-architect.html'">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architect</span>
+            <div class="tab-item active" onclick="window.location.href='./user-stories-user-roles-architects.html'">
+              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architects</span>
             </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-pm.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Manager</span>
+              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Managers</span>
             </div>
           </div>
         </div>
@@ -67,29 +67,75 @@
         </div>
         <div class="col-9">
           <div class="block-user-story">
+            <a name="anchor-summary"></a>
             <div class="wrap-content headcopy">
               “You are a Good Executive<br />
               But, you have a chance to be Great Executive”
             </div>
-            <div class="wrap-content overall">
-              <h4>Overall</h4>
+            <div class="wrap-content overall" id="section-summary">
+              <h4>Summary</h4>
               <h3>EMBOLD For Excutives</h3>
               <p>
                 As software has become the backbone of competitive advantage in all industries, bugs have become a monster of the modern executive. But while executive careers increasingly hinge on their IT and software infrastructure, most executives do not feel empowered to talk with their IT and feel distached from the risk they carry.
               </p>
             </div>
-            <div class="wrap-content actual-story">
-              <h4>Actual Stories</h4>
-              <h3>EMBOLD</h3>
-              <p>
-                - A looking glass for executives to understand the risk and rewards of their software operations<br />
-                - Reconnects executives with their most relevant resources: The developers
-              </p>
-              <div class="block-quote">
-                Content from quotation
+            <div class="wrap-content actual-story" id="section-customerStories">
+              <h4>Customer Stories</h4>
+              <div>
+                <h3>Task Force Software Recovery</h3>
+                <p>
+                  Your SOP date is getting closer and closer and your software is still not fully working as required? Over the last nine years we have built a lot of experience in supporting software suppliers and Tier-1s in achieving their target software delivery dates. We come in on short notice, assess the software system down to the source code level and give clear recommendations on how to achieve the desired quality in the available time.<br />
+                  <br />
+                  Our Task Force Software Recover projects been proven to be very efficient and successful in development projects of car multimedia systems, Heads-up displays, camera systems, car networking and autonomous driving.
+                </p>
+                <button class="btn btn-default btn-sm btn-more">Find out Use cases</button>
               </div>
             </div>
-            <div class="wrap-content user-story">
+            <div class="wrap-content actual-story">
+              <div>
+                <h3>Automotive Software Supplier Assessment</h3>
+                <p>
+                  Your SOP date is getting closer and closer and your software is still not fully working as required? Over the last nine years we have built a lot of experience in supporting software suppliers and Tier-1s in achieving their target software delivery dates. We come in on short notice, assess the software system down to the source code level and give clear recommendations on how to achieve the desired quality in the available time.<br />
+                  <br />
+                  Our Task Force Software Recover projects been proven to be very efficient and successful in development projects of car multimedia systems, Heads-up displays, camera systems, car networking and autonomous driving.
+                </p>
+                <button class="btn btn-default btn-sm btn-more">Find out Use cases</button>
+              </div>
+            </div>
+            <div class="wrap-content actual-story">
+              <div>
+                <h3>Automotive Software Supplier Management</h3>
+                <p>
+                  Your SOP date is getting closer and closer and your software is still not fully working as required? Over the last nine years we have built a lot of experience in supporting software suppliers and Tier-1s in achieving their target software delivery dates. We come in on short notice, assess the software system down to the source code level and give clear recommendations on how to achieve the desired quality in the available time.<br />
+                  <br />
+                  Our Task Force Software Recover projects been proven to be very efficient and successful in development projects of car multimedia systems, Heads-up displays, camera systems, car networking and autonomous driving.
+                </p>
+                <button class="btn btn-default btn-sm btn-more">Find out Use cases</button>
+              </div>
+            </div>
+            <div class="wrap-content actual-story">
+              <div>
+                <h3>Software Architecture Improvement</h3>
+                <p>
+                  You are planning to take a major architecture decision for one of your legacy applications? You are considering splitting a monolith application into smaller micro-serves and/or moving it to the cloud? With the help of Gamma and our experience in projects across industries we can support architecture decisions and help to plan software re-factoring.<br />
+                  <br />
+                  In one project with assisted an automotive manufacturing customer with a software project on Product Lifecycle Management. It was a very big legacy project and they were facing multiple software and architecture issues. After fully assessing the existing software structure with the help of Embold, we helped our customer to assess the benefit of different architectural changes. As a result, a clear architecture roadmap was developed.
+                </p>
+                <button class="btn btn-default btn-sm btn-more">Find out Use cases</button>
+              </div>
+            </div>
+            <div class="wrap-content actual-story">
+              <div>
+                <h3>Core Software Development Platform</h3>
+                <p>
+                  You are facing software quality issues in your internal software development? You cannot meet the required quality standard in your delivery? Embold has shown that it can significantly improve the overall software quality in automotive R&D departments, by increasing the productivity at the same time. In addition, Gamma can especially help suppliers to prove their quality improvements to customers, and also support with MISRA compliance.<br />
+                  <br />
+                  One of our customer is an automotive supplier and has introduced Embold as central development platform for their entire R&D department. They are simultaneously running projects with almost all major car manufacturing companies, where they deliver in-car chipsets. Embold is used to ensure that quality standard of their different customers can be met. In addition it showed that it can significantly increase the development efficiency.
+                </p>
+                <button class="btn btn-default btn-sm btn-more">Find out Use cases</button>
+              </div>
+            </div>
+            <div class="wrap-content user-story" id="section-useCases">
               <h4>Use Cases</h4>
               <div class="tab-user-story">
                 <div class="tab-item active">
@@ -138,7 +184,7 @@
                 </p>
               </div>
             </div>
-            <div class="wrap-content contact-sales">
+            <div class="wrap-content contact-sales" id="section-contactSales">
               <h4>Contact Sales</h4>
               <div class="block-contact-sales">
                 Benjamin
@@ -227,19 +273,19 @@
   </div>
   <script src="js/main.js" type="text/javascript"></script>
   <script>
-  $(window).on("scroll", function() {
-    if($(window).scrollTop() > 520 && $(window).scrollTop() < 1950) {
-      $(".block-sub-menu").addClass("block-sub-menu-fix");
-      $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
-    } else if ($(window).scrollTop() >= 1950) {
-      //remove the background property so it comes transparent again (defined in your css)
-      $(".block-sub-menu").addClass("block-sub-menu-fix-bottom");
-      $(".block-sub-menu").removeClass("block-sub-menu-fix");
-    } else {
-      $(".block-sub-menu").removeClass("block-sub-menu-fix");
-      $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
-    }
-  });
+    $(window).on("scroll", function() {
+      if($(window).scrollTop() > 520 && $(window).scrollTop() < 3420) {
+        $(".block-sub-menu").addClass("block-sub-menu-fix");
+        $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
+      } else if ($(window).scrollTop() >= 3420) {
+        //remove the background property so it comes transparent again (defined in your css)
+        $(".block-sub-menu").addClass("block-sub-menu-fix-bottom");
+        $(".block-sub-menu").removeClass("block-sub-menu-fix");
+      } else {
+        $(".block-sub-menu").removeClass("block-sub-menu-fix");
+        $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
+      }
+    });
   </script>
 </body>
 </html>
