--- a/embold.com/nav-solutions.html
+++ b/embold.com/nav-solutions.html
@@ -32,7 +32,7 @@
       <div class="nav-item-main">
         <a href="product-overview.html" class="nav-menu-link">About Gamma</a>
         <ul class="nav-item-sub-list">
-          <li><a href="product-overview.html">Bug Prediction</a></li>
+          <li><a href="product-overview.html#bug-prediction">Bug Prediction</a></li>
           <li><a href="product-overview.html">Recommendation Engine</a></li>
           <li><a href="product-overview.html">Scoring and A.I. Base Priorization</a></li>
           <li><a href="product-overview.html">Refactoring</a></li>
