--- a/embold.com/user-stories-user-roles-architects.html
+++ b/embold.com/user-stories-user-roles-architects.html
@@ -72,14 +72,14 @@
               But, you have a chance to be Great Executive”
             </div>
             <div class="wrap-content overall">
-              <h4>Overall</h4>
+              <h4>Summary</h4>
               <h3>EMBOLD For Excutives</h3>
               <p>
                 As software has become the backbone of competitive advantage in all industries, bugs have become a monster of the modern executive. But while executive careers increasingly hinge on their IT and software infrastructure, most executives do not feel empowered to talk with their IT and feel distached from the risk they carry.
               </p>
             </div>
             <div class="wrap-content actual-story">
-              <h4>Actual Stories</h4>
+              <h4>Customer Stories</h4>
               <h3>EMBOLD</h3>
               <p>
                 - A looking glass for executives to understand the risk and rewards of their software operations<br />
