--- a/embold-blue.com/user-stories-user-roles-pm.html
+++ b/embold-blue.com/user-stories-user-roles-pm.html
@@ -12,6 +12,8 @@
   src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
   integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
   crossorigin="anonymous"></script>
+  <script src="/js/slippry.min.js"></script>
+  <link rel="stylesheet" href="/css/slippry.css" />
   <link rel="apple-touch-icon" sizes="180x180" href="favicon/apple-touch-icon.png">
   <link rel="icon" type="image/png" sizes="32x32" href="favicon/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="favicon/favicon-16x16.png">
@@ -44,14 +46,14 @@
             <div class="tab-item" onclick="window.location.href='./user-stories-user-roles.html'">
               <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-developer.html'">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developer</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-developers.html'">
+              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developers</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-architect.html'">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architect</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-architects.html'">
+              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architects</span>
             </div>
             <div class="tab-item active" onclick="window.location.href='./user-stories-user-roles-pm.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Manager</span>
+              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Managers</span>
             </div>
           </div>
         </div>
@@ -67,29 +69,74 @@
         </div>
         <div class="col-9">
           <div class="block-user-story">
+            <a name="anchor-summary"></a>
             <div class="wrap-content headcopy">
               “You are a Good Executive<br />
               But, you have a chance to be Great Executive”
             </div>
-            <div class="wrap-content overall">
-              <h4>Overall</h4>
+            <div class="wrap-content overall" id="section-summary">
+              <h4>Summary</h4>
               <h3>EMBOLD For Excutives</h3>
               <p>
                 As software has become the backbone of competitive advantage in all industries, bugs have become a monster of the modern executive. But while executive careers increasingly hinge on their IT and software infrastructure, most executives do not feel empowered to talk with their IT and feel distached from the risk they carry.
               </p>
             </div>
-            <div class="wrap-content actual-story">
-              <h4>Actual Stories</h4>
-              <h3>EMBOLD</h3>
-              <p>
-                - A looking glass for executives to understand the risk and rewards of their software operations<br />
-                - Reconnects executives with their most relevant resources: The developers
-              </p>
-              <div class="block-quote">
-                Content from quotation
+            <div class="wrap-content actual-story" id="section-customerStories">
+              <h4>Customer Stories</h4>
+              <div style="position: relative;">
+                <a class="control_next"></a>
+                <a class="control_prev"></a>
+              </div>
+              <div id="slider">
+                <ul>
+                  <li>
+                    <h3>Task Force Software Recovery</h3>
+                    <p>
+                      Your SOP date is getting closer and closer and your software is still not fully working as required? Over the last nine years we have built a lot of experience in supporting software suppliers and Tier-1s in achieving their target software delivery dates. We come in on short notice, assess the software system down to the source code level and give clear recommendations on how to achieve the desired quality in the available time.<br />
+                      <br />
+                      Our Task Force Software Recover projects been proven to be very efficient and successful in development projects of car multimedia systems, Heads-up displays, camera systems, car networking and autonomous driving.
+                    </p>
+                    <div class="block-quote text-center">
+                      <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                    </div>
+                  </li>
+                  <li>
+                    <h3>Automotive Software Supplier Assessment</h3>
+                    <p>
+                      You are not sure if your software supplier is delivering the promised code quality? You are considering changing suppliers for a follow-on project? We have experience in assessing the overall software quality of your supplier source code. Our projects a fixed priced and time-bound to give you quick decision support when you need it!<br />
+                      <br />
+                      In the past Embold helped our customers to gain full transparency on the software quality on multiple key performance indicators such as maintainability and extensibility of a delivered software system. After that the different alternatives shown, and recommendations given were used by the client to make a profound and confident decision on the future steps.
+                    </p>
+                    <div class="block-quote text-center">
+                      <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                    </div>
+                  </li>
+                  <li>
+                    <h3>Automotive Software Supplier Management</h3>
+                    <p>
+                      You are consistently facing quality problems with the software that is being delivered to you? You want to establish a central quality management process for all your software supplier to ensure a high standard? With our intelligent software analysis platform Embold we can be your partner and build a central software quality platform for all your supplier projects.<br />
+                      <br />
+                      In the past we have assisted our customers in analyzing their supplier management processes and defining clear quality metrics against which Suppliers should be measured. Embold was then introduced as part of the Supplier Quality Assurance process, to assess each software delivery transparently against the defined metrics. This has shown to improve the interaction with suppliers significantly and to increase to overall software quality and satifisfaction.
+                    </p>
+                    <div class="block-quote text-center">
+                      <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                    </div>
+                  </li>
+                  <li>
+                    <h3>Software Architecture Improvement</h3>
+                    <p>
+                      You are planning to take a major architecture decision for one of your legacy applications? You are considering splitting a monolith application into smaller micro-serves and/or moving it to the cloud? With the help of Gamma and our experience in projects across industries we can support architecture decisions and help to plan software re-factoring.<br />
+                      <br />
+                      In one project with assisted an automotive manufacturing customer with a software project on Product Lifecycle Management. It was a very big legacy project and they were facing multiple software and architecture issues. After fully assessing the existing software structure with the help of Embold, we helped our customer to assess the benefit of different architectural changes. As a result, a clear architecture roadmap was developed.
+                    </p>
+                    <div class="block-quote text-center">
+                      <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </div>
-            <div class="wrap-content user-story">
+            <div class="wrap-content user-story" id="section-useCases">
               <h4>Use Cases</h4>
               <div class="tab-user-story">
                 <div class="tab-item active">
@@ -138,7 +185,7 @@
                 </p>
               </div>
             </div>
-            <div class="wrap-content contact-sales">
+            <div class="wrap-content contact-sales" id="section-contactSales">
               <h4>Contact Sales</h4>
               <div class="block-contact-sales">
                 Benjamin
@@ -227,19 +274,84 @@
   </div>
   <script src="js/main.js" type="text/javascript"></script>
   <script>
-  $(window).on("scroll", function() {
-    if($(window).scrollTop() > 520 && $(window).scrollTop() < 1950) {
-      $(".block-sub-menu").addClass("block-sub-menu-fix");
-      $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
-    } else if ($(window).scrollTop() >= 1950) {
-      //remove the background property so it comes transparent again (defined in your css)
-      $(".block-sub-menu").addClass("block-sub-menu-fix-bottom");
-      $(".block-sub-menu").removeClass("block-sub-menu-fix");
-    } else {
-      $(".block-sub-menu").removeClass("block-sub-menu-fix");
-      $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
-    }
-  });
+    $(window).on("scroll", function() {
+      if($(window).scrollTop() > 520 && $(window).scrollTop() < 3420) {
+        $(".block-sub-menu").addClass("block-sub-menu-fix");
+        $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
+      } else if ($(window).scrollTop() >= 3420) {
+        //remove the background property so it comes transparent again (defined in your css)
+        $(".block-sub-menu").addClass("block-sub-menu-fix-bottom");
+        $(".block-sub-menu").removeClass("block-sub-menu-fix");
+      } else {
+        $(".block-sub-menu").removeClass("block-sub-menu-fix");
+        $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
+      }
+    });
   </script>
+  <style>
+  #slider {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    margin: 0 auto 0 0;
+    border-radius: 4px;
+  }
+
+  #slider ul {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    height: 200px;
+    list-style: none;
+  }
+
+  #slider ul li {
+    position: relative;
+    display: block;
+    float: left;
+    margin: 0;
+    padding: 0;
+    width: 795px;
+  }
+
+  a.control_prev, a.control_next {
+    position: absolute;
+    top: 4em;
+    z-index: 999;
+    display: block;
+    padding: 0.8em;
+    width: 2em;
+    height: 2em;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1.5em;
+    opacity: 0.3;
+    cursor: pointer;
+  }
+
+  a.control_prev:hover, a.control_next:hover {
+    opacity: 1;
+    -webkit-transition: all 0.2s ease;
+  }
+
+  a.control_prev {
+    left: -2em;
+    background-image: url('images/ic-md-arrow-right-no-line.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center center;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  a.control_next {
+    right: -2em;
+    background-image: url('images/ic-md-arrow-right-no-line.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center center;
+  }
+  </style>
 </body>
 </html>
