--- a/embold-blue.com/user-stories-user-roles.html
+++ b/embold-blue.com/user-stories-user-roles.html
@@ -22,6 +22,25 @@
 </head>
 <body>
   <div class="nav-solutions"></div>
+  <div class="wrap-sub-menu-alt">
+    <div class="container">
+      <div class="row">
+        <div class="col-3">
+          Excutives
+        </div>
+        <div class="col-9">
+          <ul class="sub-menu-alt">
+            <li id="summary">Summary / Customer Stories</li>
+            <li id="useCases">Use Cases</li>
+            <li id="contactSales">Contact Sales</li>
+          </ul>
+          <ul class="sub-menu-alt">
+            <li>DOWNLOAD</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <div class="container block block-header-sub">
     <div class="row">
@@ -44,14 +63,14 @@
             <div class="tab-item active" onclick="window.location.href='./user-stories-user-roles.html'">
               <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-developer.html'">
-              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developer</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-developers.html'">
+              <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developers</span>
             </div>
-            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-architect.html'">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architect</span>
+            <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-architects.html'">
+              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architects</span>
             </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-pm.html'">
-              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Manager</span>
+              <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Managers</span>
             </div>
           </div>
         </div>
@@ -62,34 +81,85 @@
   <section class="block block-sub-user-stories">
     <div class="container">
       <div class="row">
-        <div class="col-3">
-          <div class="block-sub-menu" id="nav-sub-solutions"></div>
-        </div>
-        <div class="col-9">
+        <div class="col-12">
           <div class="block-user-story">
             <div class="wrap-content headcopy">
               “You are a Good Executive<br />
               But, you have a chance to be Great Executive”
             </div>
-            <div class="wrap-content overall">
-              <h4>Overall</h4>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="block-user-story">
+            <div class="wrap-content overall wrap-content-alt" id="section-summary">
+              <h4>Summary</h4>
               <h3>EMBOLD For Excutives</h3>
               <p>
-                As software has become the backbone of competitive advantage in all industries, bugs have become a monster of the modern executive. But while executive careers increasingly hinge on their IT and software infrastructure, most executives do not feel empowered to talk with their IT and feel distached from the risk they carry.
+                Embold has been build with a decade of experience in supporting automotive manufacturing companies and automotive suppliers in a large variety of projects. We have a lot of experience both with in-car software, like car multimedia systems, camera or networking firmware, and corporate software, like logistics, Product Lifecycle Management and more. If you would like to hear more, please reach out to us and we will connect you to one of our Automotive Experts.
               </p>
             </div>
-            <div class="wrap-content actual-story">
-              <h4>Actual Stories</h4>
-              <h3>EMBOLD</h3>
-              <p>
-                - A looking glass for executives to understand the risk and rewards of their software operations<br />
-                - Reconnects executives with their most relevant resources: The developers
-              </p>
-              <div class="block-quote">
-                Content from quotation
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="block-user-story">
+            <div class="wrap-content actual-story wrap-content-alt" id="section-customerStories">
+              <h4>Customer Stories</h4>
+              <div id="slider">
+                <a class="control_next"></a>
+                <a class="control_prev"></a>
+                <ul>
+                  <li>
+                    <h3>Task Force Software Recovery</h3>
+                    <p>
+                      Your SOP date is getting closer and closer and your software is still not fully working as required? Over the last nine years we have built a lot of experience in supporting software suppliers and Tier-1s in achieving their target software delivery dates. We come in on short notice, assess the software system down to the source code level and give clear recommendations on how to achieve the desired quality in the available time.<br />
+                      <br />
+                      Our Task Force Software Recover projects been proven to be very efficient and successful in development projects of car multimedia systems, Heads-up displays, camera systems, car networking and autonomous driving.
+                    </p>
+                    <div class="block-quote">
+                      <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                    </div>
+                  </li>
+                  <li>
+                    <h3>Automotive Software Supplier Assessment</h3>
+                    <p>
+                      You are not sure if your software supplier is delivering the promised code quality? You are considering changing suppliers for a follow-on project? We have experience in assessing the overall software quality of your supplier source code. Our projects a fixed priced and time-bound to give you quick decision support when you need it!<br />
+                      <br />
+                      In the past Embold helped our customers to gain full transparency on the software quality on multiple key performance indicators such as maintainability and extensibility of a delivered software system. After that the different alternatives shown, and recommendations given were used by the client to make a profound and confident decision on the future steps.
+                    </p>
+                    <div class="block-quote">
+                      <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                    </div>
+                  </li>
+                  <li>
+                    <h3>Automotive Software Supplier Management</h3>
+                    <p>
+                      You are consistently facing quality problems with the software that is being delivered to you? You want to establish a central quality management process for all your software supplier to ensure a high standard? With our intelligent software analysis platform Embold we can be your partner and build a central software quality platform for all your supplier projects.<br />
+                      <br />
+                      In the past we have assisted our customers in analyzing their supplier management processes and defining clear quality metrics against which Suppliers should be measured. Embold was then introduced as part of the Supplier Quality Assurance process, to assess each software delivery transparently against the defined metrics. This has shown to improve the interaction with suppliers significantly and to increase to overall software quality and satifisfaction.
+                    </p>
+                    <div class="block-quote">
+                      <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                    </div>
+                  </li>
+                  <li>
+                    <h3>Software Architecture Improvement</h3>
+                    <p>
+                      You are planning to take a major architecture decision for one of your legacy applications? You are considering splitting a monolith application into smaller micro-serves and/or moving it to the cloud? With the help of Gamma and our experience in projects across industries we can support architecture decisions and help to plan software re-factoring.<br />
+                      <br />
+                      In one project with assisted an automotive manufacturing customer with a software project on Product Lifecycle Management. It was a very big legacy project and they were facing multiple software and architecture issues. After fully assessing the existing software structure with the help of Embold, we helped our customer to assess the benefit of different architectural changes. As a result, a clear architecture roadmap was developed.
+                    </p>
+                    <div class="block-quote">
+                      <button class="btn btn-default btn-md btn-more">Find out Use cases</button>
+                    </div>
+                  </li>
+                </ul>
               </div>
             </div>
-            <div class="wrap-content user-story">
+          </div>
+        </div>
+        <div class="col-12">
+          <div class="block-user-story">
+            <div class="wrap-content user-story wrap-content-alt" id="section-useCases">
               <h4>Use Cases</h4>
               <div class="tab-user-story">
                 <div class="tab-item active">
@@ -128,17 +198,30 @@
               </h3>
               <div class="paragraph">
                 <p>
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum aliquet risus vitae nisl egestas luctus. Nulla tempus tortor a dui fringilla tincidunt. Cras consequat sed nulla eu eleifend. Nullam consectetur lacus dolor, et consectetur enim accumsan at. Aenean commodo molestie lectus, venenatis fermentum nisl pellentesque vel. Proin eros ipsum, feugiat vitae urna eget, pellentesque porttitor metus. Aenean eleifend sed enim ut pharetra. Nullam molestie nunc ante, eu maximus diam ultrices sit amet. Integer fermentum posuere nisi, non placerat felis condimentum fringilla. Proin tincidunt ante dolor, non lobortis nibh porttitor et. Donec fringilla rhoncus consequat. Duis maximus sodales elementum. Nulla pharetra tortor dapibus, maximus quam dignissim, molestie purus. Morbi ut auctor neque, at aliquet eros.
+                With the Embold platform, not only can customer discover critical hotspots in their software systems, it can be a platform to drive innovation and improve software quality and transparency within research and development division.<br />
+                Embold looks at the code from multiple dimensions:
                 </p>
+                  <ul>
+                    <li>
+                     Design: Design issues are patterns that seem to work but are counter-productive and far from optimal in practice. Design issues can easily result in un-maintainable and error-prone solutions. Embold identifies multiple class and method level anti-patterns in the code which takes dependencies, inheritance hierarchy and important software metrics into consideration. Few Examples: God class, Brain methods, Local breakable, Local butterfly, Shotgun surgery.
+                    </li>
+                    <li>
+                      Metrics: Metrics are a way to control quality. A Software Metric is a measure of some property of a piece of software or its specifications. It compresses system traits into numbers
+                    </li>
+                    <li>
+                      Duplication: Duplicate Code or a Clone is a piece of software code that occurs more than once, either within a same component (which could be a single class, source code file, a module) or across multiple components of an application or even across multiple applications owned or maintained by the same entity. Code Duplication refers to not just exact matching between two identical pieces of code, but also to the matching functionality, which can be possibly extracted out into a separate component.
+                    </li>
+                    <li>
+                      Code Issues: Code issues are programming flaws like inefficient coding practices, sub-optimal resource utilization, improper exception handling, etc. These flaws affect KPIs like robustness, accuracy, efficiency, maintainability, reliability, understandability etc.
+                    </li>
+                  </ul>
                 <p>
-                  Aenean nec quam eget felis varius dictum vel quis nibh. Vestibulum accumsan urna ac dui sagittis tempus. Nulla interdum malesuada odio facilisis volutpat. Mauris pellentesque et felis nec ornare. Suspendisse libero ante, vestibulum in ligula id, rhoncus consectetur neque. Suspendisse in erat ac ligula pretium facilisis ac nec ante. Suspendisse egestas iaculis justo, in hendrerit metus placerat in. Vestibulum ac ultricies mauris, eu viverra odio. Phasellus sit amet aliquet erat. Duis cursus euismod enim, id pellentesque orci porta sit amet. Fusce felis nunc, pretium sit amet elit id, porta accumsan mauris. In faucibus mauris ut egestas hendrerit. Sed ac laoreet est. Donec elit tellus, imperdiet et risus hendrerit, rhoncus laoreet nisi. Mauris tincidunt diam quis orci gravida, ut eleifend mauris fermentum. Nunc finibus vehicula justo, elementum iaculis libero laoreet ac.
-                </p>
-                <p>
-                  Nullam eu bibendum ante. Pellentesque eget scelerisque sem. Nam sollicitudin felis nunc, sed vehicula ex sollicitudin id. Nulla arcu nulla, condimentum sit amet lacus in, accumsan dictum turpis. Nulla at tincidunt arcu. Proin ac magna libero. In lacus elit, facilisis vitae odio a, auctor iaculis sem. In iaculis ex diam, eget pharetra augue blandit eu.
+                Embold uses a proprietary ‘multi-vector’ diagnostic technology to combine those different dimensions to analyse and prioritize hotspots in software components. This helps you fix the biggest issues first.<br><br>
+                After introducing Embold as core development platform, clients have observed a significant improvement in their overall software quality regarding several different metrics and KPIs. In addition, the number of raised issues by their customers have significantly decreased, leading to reduced costs and a higher customer’s satisfaction. As a side effect, after making the Embold rating a part of the developer’s regular performance evaluations, their skillset has noticeably increased leading to a higher development quality.
                 </p>
               </div>
             </div>
-            <div class="wrap-content contact-sales">
+            <div class="wrap-content contact-sales" id="section-contactSales">
               <h4>Contact Sales</h4>
               <div class="block-contact-sales">
                 Benjamin
@@ -241,5 +324,77 @@
     }
   });
   </script>
+  <style>
+  #slider {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    margin: 0 auto 0 0;
+    border-radius: 4px;
+  }
+
+  #slider ul {
+    position: relative;
+    margin: 0;
+    padding: 0;
+    height: 200px;
+    list-style: none;
+  }
+
+  #slider ul li {
+    position: relative;
+    display: block;
+    float: left;
+    margin: 0;
+    padding: 0;
+    width: 500px;
+  }
+
+  a.control_prev, a.control_next {
+    position: absolute;
+    top: -0.25em;
+    z-index: 999;
+    display: block;
+    padding: 0.8em;
+    width: 2em;
+    height: 2em;
+    text-decoration: none;
+    font-weight: 600;
+    font-size: 1em;
+    opacity: 0.8;
+    cursor: pointer;
+  }
+
+  a.control_prev:hover, a.control_next:hover {
+    opacity: 1;
+    -webkit-transition: all 0.2s ease;
+  }
+
+  a.control_prev {
+    right: 1.6em;
+    background-image: url('images/ic-md-arrow-right-no-line.svg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    -webkit-transform: rotate(180deg);
+    -ms-transform: rotate(180deg);
+    transform: rotate(180deg);
+  }
+
+  a.control_next {
+    right: 0;
+    background-image: url('images/ic-md-arrow-right-no-line.svg');
+    background-repeat: no-repeat;
+    background-size: 100%;
+    background-position: center center;
+  }
+
+  .slider_option {
+    position: relative;
+    margin: 10px auto;
+    width: 160px;
+    font-size: 18px;
+  }
+  </style>
 </body>
 </html>
