--- a/embold-blue.com/user-stories-user-roles-architects.html
+++ b/embold-blue.com/user-stories-user-roles-architects.html
@@ -41,14 +41,14 @@
             Select a your role
           </div>
           <div class="tab-wrap">
+            <div class="tab-item active" onclick="window.location.href='./user-stories-user-roles-architects.html'">
+              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architects</span>
+            </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-user-roles.html'">
               <div class="tab-item-icon ic-sm-user-executive"></div> <span>Executive</span>
             </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-developers.html'">
               <div class="tab-item-icon ic-sm-user-developer"></div> <span>Developers</span>
-            </div>
-            <div class="tab-item active" onclick="window.location.href='./user-stories-user-roles-architects.html'">
-              <div class="tab-item-icon ic-sm-user-architect"></div> <span>Architects</span>
             </div>
             <div class="tab-item" onclick="window.location.href='./user-stories-user-roles-pm.html'">
               <div class="tab-item-icon ic-sm-user-pm"></div> <span>Product Managers</span>
@@ -284,6 +284,31 @@
       } else {
         $(".block-sub-menu").removeClass("block-sub-menu-fix");
         $(".block-sub-menu").removeClass("block-sub-menu-fix-bottom");
+      }
+    });
+  </script>
+  <script>
+    $(window).on("scroll", function() {
+      if($(window).scrollTop() > 570 && $(window).scrollTop() < 840) {
+        $("#summary").addClass("active");
+        $("#customerStories").removeClass("active");
+        $("#useCases").removeClass("active");
+        $("#contactSales").removeClass("active");
+      } else if ($(window).scrollTop() >= 840 && $(window).scrollTop() < 2750) {
+        $("#summary").removeClass("active");
+        $("#customerStories").addClass("active");
+        $("#useCases").removeClass("active");
+        $("#contactSales").removeClass("active");
+      } else if ($(window).scrollTop() >= 2750 && $(window).scrollTop() < 3595) {
+        $("#summary").removeClass("active");
+        $("#customerStories").removeClass("active");
+        $("#useCases").addClass("active");
+        $("#contactSales").removeClass("active");
+      } else {
+        $("#summary").removeClass("active");
+        $("#customerStories").removeClass("active");
+        $("#useCases").removeClass("active");
+        $("#contactSales").removeClass("active");
       }
     });
   </script>
